k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploywatch
  labels:
    app: deploywatch
spec:
  selector:
    app: deploywatch
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
